# golovina

./: .eslintrc.js  .gitignore  .postcssrc.yml  .rubocop.yml  .stylelintrc.js  Capfile  Gemfile  LICENSE  README.md  db.sql  docker-compose.yml  package.json  postcss.config.js
api/: .gitignore  .rubocop.yml  .stylelintrc.js  Capfile  Dockerfile  Dockerfile.k8s  Gemfile  docker-compose.yml  nginx.conf  package.json
api-go/: Dockerfile  Dockerfile.k8s  go.mod  go.sum  main.go
app/: .eslintrc.json  Dockerfile.k8s  next.config.js  package.json  postcss.config.json  sentry.client.config.ts  sentry.properties
config/: application.rb  credentials.yml.enc  database.default.yml  database.yml  deploy.rb  routes.rb  schedule.rb  secrets.default.yml  secrets.yml  sitemap.rb  webpacker.yml
db/: categories.yml  colors.yml  looks.yml  schema.rb  seeds.rb  themes.yml
deploy/: INSTALL.md
fastapi/: Dockerfile  Dockerfile.k8s  go.mod  go.sum  main.go
fastapi-rs/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.k8s  diesel.toml  docker-compose.yml
fastapi-rs/src/: main.rs  schema.rs
fastapi-rs/src/app/: db.rs  mod.rs  s3.rs
fastapi-rs/src/app/catalog/: data.rs  entities.rs  mod.rs  service.rs
fastapi-rs/src/app/categories/: models.rs
fastapi-rs/src/app/categories/entities/: category.rs  category_translation.rs  mod.rs
fastapi-rs/src/app/delivery_cities/: data.rs  mod.rs  models.rs  service.rs
fastapi-rs/src/app/delivery_cities/entities/: delivery_city.rs  mod.rs
fastapi-rs/src/app/locale/: middleware.rs
fastapi-rs/src/app/orders/: models.rs
fastapi-rs/src/app/orders/entities/: mod.rs  order.rs  order_item.rs
fastapi-rs/src/app/sessions/: data.rs  mod.rs  service.rs
fastapi-rs/src/app/sessions/entities/: mod.rs
fastapi-rs/src/app/themes/: models.rs
fastapi-rs/src/app/themes/entities/: mod.rs  themable.rs  theme.rs  theme_translation.rs
fastapi-rs/src/app/uploads/: data.rs  mod.rs  service.rs
fastapi-rs/src/app/users/: models.rs
fastapi-rs/src/app/users/entities/: user.rs
fastapi-rs/src/app/variants/: models.rs
fastapi-rs/src/app/variants/entities/: mod.rs  variant.rs  variant_translation.rs
fastapi-rs/src/app/wishlists/: models.rs
fastapi-rs/src/app/wishlists/entities/: mod.rs  wishlist.rs
lib/: sms.rb
public/: return_statement.docx
(+1739 files in other folders)
